# ya-test-task

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
src/: main.py  schemas.py
src/alembic/: env.py
src/alembic/versions/: fd9098c6e778_main.py
src/api/: quiz.py
src/db/: db.py  models.py
src/repository/: quiz.py
src/service/: injector.py  quiz.py
src/utils/: abstract_repo.py  settings.py
tests/: fixtures.py  get_db_test.py  test_question.py
